# 3D-OpenGL-Scene-Renderer

./: .gitattributes  CMakeLists.txt  README.md
cmake/modules/: assimp-vc143-mtd.lib
resources/models/helicopter/: Seahawk.mtl
scripts/: DEPENDENCIES.h  GlobalVariables.h  main.cpp
scripts/Graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  WindowManager.cpp  WindowManager.h
scripts/Graphics/Lighting/: AmbientLight.cpp  AmbientLight.h  DiffuseLight.cpp  DiffuseLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  PointLight.cpp  PointLight.h  SpecularLight.cpp  SpecularLight.h  SpotLight.cpp  SpotLight.h
scripts/core/: Camera.cpp  Camera.h  Input.cpp  Input.h
scripts/shaders/: fragmentShader.glsl  fsBackup.txt  vertexShader.glsl
